--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div> 
-  <p class="ccc"> winou papa </p>
-</div>
+
+  <p> vous avez la bienvenue </p>
+  <app-firstap> </app-firstap>
+  <img [src]="assets/y9.jpg" >
